build/readiness-app/objects/inc_User_Token__c.object
<CustomObject>
    <description>Used to store access and refresh tokens for report API calls.</description>
    <label>inContact User Token</label>
    <nameField>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inContact User Token</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>accessTokenTime__c</fullName>
        <description>accessTokenTime</description>
        <inlineHelpText>accessTokenTime</inlineHelpText>
        <label>accessTokenTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>access_token__c</fullName>
        <description>Access token</description>
        <inlineHelpText>Access token</inlineHelpText>
        <label>access token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>expires_in__c</fullName>
        <description>Token Expires in</description>
        <inlineHelpText>Token Expires in</inlineHelpText>
        <label>expires_in</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>